# email-service

./: .gitignore  README.md  run.py
docker/: client.yml  node.yml
docker/client-nginx/certs/: default.crt  default.key
docker/client-nginx/templates/: default.conf.template
email-service/: .dockerignore  Cargo.toml
email-service/client/: Cargo.toml  Dockerfile  entrypoint.sh
email-service/client/migrations/00000000000000_diesel_initial_setup/: up.sql
email-service/client/migrations/2021-07-31-192601_users/: up.sql
email-service/client/migrations/2021-07-31-192633_friends/: up.sql
email-service/client/migrations/2021-07-31-193837_emails/: up.sql
email-service/client/migrations/2021-07-31-194039_nodes/: up.sql
email-service/client/src/: config.rs  consts.rs  db.rs  lib.rs  models.rs  raw_models.rs  schema.rs  state.rs  task.rs
email-service/client/src/app/: auth.rs  csrf.rs  error.rs  flash.rs  forms.rs  keys.rs  macros.rs  middleware.rs  mod.rs  multipart.rs  pagination.rs  qrcode.rs  request_node.rs  response.rs  service.rs  tera.rs
email-service/client/static/: friends.js  nodes.js  profile.js  register.js
email-service/client/templates/: _macros.html  add-friend.html  add-node.html  base.html  delete-account.html  email.html  emails.html  friends.html  index.html  login.html  nodes.html  profile.html  register.html  send-email.html
email-service/client/templates/_includes/: csrf-token.html  form-errors.html
email-service/common/: Cargo.toml
email-service/common/src/: consts.rs  crypto.rs  email.rs  error.rs  helpers.rs  lib.rs  macros.rs  package.rs
email-service/launcher/: main.rs
email-service/node/: Cargo.toml  Dockerfile  entrypoint.sh
email-service/node/migrations/2021-07-31-180254_emails/: up.sql
email-service/node/src/: config.rs  consts.rs  db.rs  handle.rs  lib.rs  models.rs  schema.rs  state.rs  task.rs
