[package]
name = "common"
version = "1.0.0"
edition = "2018"

[dependencies]
async-socks5 = "0.5.1"
base64 = "0.13.0"
bincode = "1.3.0"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = "2.0.4"
diesel-async = { version = "0.2.2", features = ["deadpool", "postgres"] }
futures = "0.3.21"
getrandom = { version = "0.2.7", features = ["std"] }
hex = "0.4.3"
lazy_static = "1.4.0"
openssl = "0.10.41"
thiserror = "1.0.31"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"

[dependencies.tokio]
version = "1.20.0"
features = [
	"fs",
	"io-util",
	"macros",
	"net",
	"rt",
	"rt-multi-thread",
	"sync",
	"time",
]

[dev-dependencies]
anyhow = "1.0.69"
