[package]
name = "node"
version = "1.0.0"
edition = "2018"

[dependencies]
anyhow = "1.0.69"
bincode = "1.3.3"
common = { path = "../common" }
diesel = "2.0.4"
diesel-async = { version = "0.2.2", features = ["deadpool", "postgres"] }
lazy_static = "1.4.0"
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.20.0", features = ["macros", "net", "rt-multi-thread"] }
